--- a/style2.css
+++ b/style2.css
@@ -23,6 +23,9 @@ header h1{
     margin-right: 120px;
     font-family: 'vampiro one';
 }
+li{
+    list-style: none;
+}
 div h1{
     color: white;
 }
@@ -38,16 +41,14 @@ hr{
 main{
     width: 900px;
     border: red 2px solid;
-    margin-left: 310px;
+    margin-left: 340px;
 }
 .picture img{
     width: 900px;
     height:500px;
     object-fit: cover;
    }
-   #firstbloc{
-    
-}
+   
 .titre p{
     color: beige;
     font-size: 30px;
@@ -90,7 +91,6 @@ main{
 .icone-1{
     display: flex;
     align-items: center;
-    margin-right: 32%;
     gap: 10px;
 }
 .icone-1 img{
@@ -535,3 +535,61 @@ footer p{
     color: beige;
     font-size: 20px;
   }
+  @media only screen 
+  and (min-device-width: 768px) 
+  and (max-device-width: 1024px) {
+    main-2{
+        display: none;
+    }
+    #contenair{
+        width: 100%;
+        margin: 0 -100px;
+        
+    }
+    nav img{
+        width: 100%;
+        margin: 0 150px;
+    }
+    nav p{
+       font-size: 40px;
+       margin-left: 200px;
+    }
+    nav div{
+        margin-left: 100px;
+    }
+    header{
+        margin-left: 50%;
+    }
+    ul{
+        margin-left: 100px;
+    }
+    button{
+        margin-left: 150px;
+    }
+    nav hr{
+        margin-left: 380px;
+    }
+    #point{
+        margin-left: 200px;
+    }
+    #icons{
+        display: block;
+    }
+    #icons:before{
+        content: "\2630";
+        color: beige;
+    }
+    nav ul{
+        position: fixed;
+        left: -100%;
+        top: 5%;
+        flex-direction: column;
+        width: 100%;
+        text-align: center;
+        transition: 0.25s;
+    }
+    header h1{
+        margin: 0 10px;
+    }
+    }
+    
