--- a/style2.css
+++ b/style2.css
@@ -386,7 +386,7 @@ footer #firstparty{
  display: flex;
  margin: 45px 0;
 }
-footer #firstparty :nth-child(2){
+footer #firstparty > :nth-child(2){
     display: flex;
     align-items: center;
     gap: 30px;
@@ -586,5 +586,18 @@ footer p{
     header h1{
         margin: 0 10px;
     }
+    footer li {
+        display: none;
+       
     }
-    
+    footer #firstparty h1{
+        text-align: center;
+        margin: 0;
+    }
+    footer{
+        margin: 0 auto;
+    }
+    #firstparty{
+        margin: 0 auto;
+
+    }
