--- a/style.css
+++ b/style.css
@@ -558,7 +558,7 @@ border: rgb(228, 49, 228) solid 1px;
      display: flex;
      margin: 45px 0;
     }
-    footer #firstparty :nth-child(2){
+    footer #firstparty > :nth-child(2){
         display: flex;
         align-items: center;
         gap: 30px;
