--- a/style2.css
+++ b/style2.css
@@ -537,14 +537,13 @@ footer p{
         display: none;
     }
     #contenair{
-        width: 100%;
-        margin: 0 -100px;
-        
+       margin-left: -100px;
     }
-    nav img{
-        width: 100%;
-        margin: 0 150px;
-    }
+    .picture img {
+        width: 800px;
+        height: 500px;
+        object-fit: cover;
+    }    
     nav p{
        font-size: 40px;
        margin-left: 200px;
@@ -553,7 +552,7 @@ footer p{
         margin-left: 100px;
     }
     header{
-        margin-left: 50%;
+        margin-left: 20%;
     }
     ul{
         margin-left: 100px;
@@ -592,7 +591,7 @@ footer p{
     }
     footer #firstparty h1{
         text-align: center;
-        margin: 0;
+       
     }
     footer{
         margin: 0 auto;
@@ -601,3 +600,10 @@ footer p{
         margin: 0 auto;
 
     }
+    .pinkbloc{
+        display: none;
+    }
+    #firstparty div {
+       margin-left: 20%;
+    }
+}
